--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "simple-chat",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://metalspell.github.io/Simple-chat/",
   "dependencies": {
     "@emotion/react": "^11.10.0",
     "@emotion/styled": "^11.10.0",
@@ -26,6 +27,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -49,6 +52,7 @@
     ]
   },
   "devDependencies": {
+    "gh-pages": "^4.0.0",
     "redux-devtools-extension": "^2.13.9"
   }
 }
